add dark theme background

--- a/server/html/layouts/main.html
+++ b/server/html/layouts/main.html
@@ -17,7 +17,7 @@
   </script>
 
 </head>
-<body>
+<body class="bg-white dark:bg-gray-500">
   <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-800">
     <div class="container flex flex-wrap justify-between items-center mx-auto">
       <a href="/" class="flex items-center">
