--- a/server/html/views/login.html
+++ b/server/html/views/login.html
@@ -1,4 +1,4 @@
-<div class="relative flex min-h-screen flex-col justify-center overflow-hidden bg-gray-50 py-6 sm:py-12">
+<div class="relative min-h-screen flex flex-col justify-center overflow-hidden bg-gray-50 py-6 sm:py-12">
   <div class="relative bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:rounded-lg sm:px-10">
     <form action="/api/login/" method="post">
       <div class="mb-6">
