add dark theme to login page

--- a/server/html/views/login.html
+++ b/server/html/views/login.html
@@ -1,5 +1,5 @@
-<div class="relative min-h-screen flex flex-col justify-center overflow-hidden bg-gray-50 py-6 sm:py-12">
-  <div class="relative bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:rounded-lg sm:px-10">
+<div class="relative min-h-screen flex flex-col justify-center overflow-hidden sm:py-12">
+  <div class="relative bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:rounded-lg sm:px-10 dark:bg-gray-800 dark:border-gray-700">
     <form action="/api/login/" method="post">
       <div class="mb-6">
         <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Username</label>
