--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -1,84 +1,59 @@
 <div class=" container flex justify-center ">
-  <div class="p-4 mt-6 bg-white rounded-lg border shadow-md sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-  <h5 class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">Hosts</h5>
+  <div class="p-4 mt-6 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700">
+    <div class="flex justify-between items-center mb-4">
+      <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Hosts under monitoring</h5>
+      <a href="#" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
+          ➕ Add new host
+      </a>
+ </div>
+ <div class="flow-root">
+      <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
+          <li class="py-3 sm:py-4">
+              <div class="flex items-center space-x-6">
+                  <div class="flex-shrink-0">
+                      <img class="w-8 h-8 rounded-full" src="/img/ubuntu.svg" alt="Neil image">
+                  </div>
+                  <div class="flex-1 min-w-0">
+                      <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                        DESKTOP-SIRBSHC
+                      </p>
+                      <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                        Public IP: 1.2.3.4
+                      </p>
+                  </div>
+                  <div class="flex-1 min-w-1">
+                    <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                      Ubuntu
+                    </p>
+                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                      20.04.3 LTS (Focal Fossa)
+                    </p>
+                  </div>
+                  <div class="flex-1 min-w-1">
+                    <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                      💻 11th Gen Intel(R) Core(TM) i9-11900H @ 2.50GHz
 
-  <div class="relative overflow-x-auto shadow-md sm:rounded-lg ">
-    <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-            <tr>
-                <th scope="col" class="px-6 py-3">
-                    Hostname
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    Color
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    Category
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    Price
-                </th>
-                <th scope="col" class="px-6 py-3">
-                    <span class="sr-only">Edit</span>
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 dark:text-white whitespace-nowrap">
-                    Apple MacBook Pro 17"
-                </th>
-                <td class="px-6 py-4">
-                    Sliver
-                </td>
-                <td class="px-6 py-4">
-                    Laptop
-                </td>
-                <td class="px-6 py-4">
-                    $2999
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                </td>
-            </tr>
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 dark:text-white whitespace-nowrap">
-                    Microsoft Surface Pro
-                </th>
-                <td class="px-6 py-4">
-                    White
-                </td>
-                <td class="px-6 py-4">
-                    Laptop PC
-                </td>
-                <td class="px-6 py-4">
-                    $1999
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                </td>
-            </tr>
-            <tr class="bg-white dark:bg-gray-800">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 dark:text-white whitespace-nowrap">
-                    Magic Mouse 2
-                </th>
-                <td class="px-6 py-4">
-                    Black
-                </td>
-                <td class="px-6 py-4">
-                    Accessories
-                </td>
-                <td class="px-6 py-4">
-                    $99
-                </td>
-                <td class="px-6 py-4 text-right">
-                    <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+                    </p>
+                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                      CPUs: 16
+                      &nbsp;&nbsp;&nbsp;
+                      RAM: 8 GB (38% use)
+                      &nbsp;&nbsp;&nbsp;
+                      SWAP 2 GB (13% use)
+                    </p>
+                  </div>
+
+                  <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
+                    💽 Disk: 87% 
+                  </div>
+              </div>
+          </li>
+
+      </ul>
+ </div>
+
+
   </div>
-
 </div>
 
 
