--- a/server/html/layouts/main.html
+++ b/server/html/layouts/main.html
@@ -18,7 +18,7 @@
 
 </head>
 <body class="bg-white dark:bg-gray-500">
-  <nav class="bg-white absolute z-50 min-w-full border-gray-200 px-2 sm:px-4 py-2.5 dark:bg-gray-800">
+  <nav class="bg-white fixed w-full shadow-md z-50 min-w-full border-gray-200 px-2 sm:px-4 py-2.5 dark:bg-gray-800">
     <div class="container flex flex-wrap justify-between items-center mx-auto">
       <a href="/" class="flex items-center">
         <!-- <img src="/static/logo.svg" class="mr-3 h-6 sm:h-9" alt="HotHost Logo" /> -->
