add tasks json, fix center

--- a/server/html/layouts/main.html
+++ b/server/html/layouts/main.html
@@ -33,6 +33,8 @@
       <div class="flex md:order-2">
         {{#if (and (not authorized) (not hideLoginButton))}}
         <a href="/login/" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</a>
+        {{else}}
+        <div class="px-12"></div>
         {{/if}}
         <!-- <button data-collapse-toggle="mobile-menu-4" type="button" class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-4" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
