--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -7,49 +7,105 @@
       </a>
  </div>
  <div class="flow-root">
-      <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
-          <li class="py-3 sm:py-4">
-              <div class="flex items-center space-x-6">
-                  <div class="flex-shrink-0">
-                      <img class="w-8 h-8 rounded-full" src="/img/ubuntu.svg" alt="Neil image">
-                  </div>
-                  <div class="flex-1 min-w-0">
-                      <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                        DESKTOP-SIRBSHC
-                      </p>
-                      <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                        Public IP: 1.2.3.4
-                      </p>
-                  </div>
-                  <div class="flex-1 min-w-1">
-                    <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                      Ubuntu
-                    </p>
-                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                      20.04.3 LTS (Focal Fossa)
-                    </p>
-                  </div>
-                  <div class="flex-1 min-w-1">
-                    <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                      💻 11th Gen Intel(R) Core(TM) i9-11900H @ 2.50GHz
+    <table role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
+      <tr class="mt-6">
+            <td class="pt-4 pr-4 flex-shrink-0">
+                <img class="w-8 h-8 rounded-full" src="/img/ubuntu.svg" alt="Neil image">
+            </td>
+            <td class="pt-4 pr-4 flex-1 items-center text-base font-semibold text-gray-900 dark:text-white">
+              🟢 Online
+            </td>
+            <td class="pt-4 pr-4 flex-1 min-w-1">
+                <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                  DESKTOP-SIRBSHC
+                </p>
+                <p class="text-sm text-gray-500 dark:text-gray-400">
+                  Public IP: 1.2.3.4
+                </p>
+            </td>
+            <td class="pt-4 pr-4 flex-1 min-w-1">
+              <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                Ubuntu
+              </p>
+              <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                20.04.3 LTS (Focal Fossa)
+              </p>
+            </td>
+            <td class="pt-4 pr-4 flex-1 min-w-1">
+              <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                💻 11th Gen Intel(R) Core(TM) i9-11900H @ 2.50GHz
 
-                    </p>
-                    <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                      CPUs: 16
-                      &nbsp;&nbsp;&nbsp;
-                      RAM: 8 GB (38% use)
-                      &nbsp;&nbsp;&nbsp;
-                      SWAP 2 GB (13% use)
-                    </p>
-                  </div>
+              </p>
+              <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                CPUs: 16
+                &nbsp;&nbsp;&nbsp;
+                RAM: 8 GB (38% use)
+                &nbsp;&nbsp;&nbsp;
+                SWAP 2 GB (13% use)
+              </p>
+            </td>
 
-                  <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
-                    💽 Disk: 87% 
-                  </div>
-              </div>
-          </li>
+            <td class="flex-1 items-center text-base font-semibold text-gray-900 dark:text-white">
+              <p class="text-sm">
+                💽 Disk: 20 GB
+              </p>
+              <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                (87% used) <span class="bg-pink-100 text-pink-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-pink-200 dark:text-pink-900">WARNING</span>
+              </p>
+            </td>
+        </div>
+      </tr>
 
-      </ul>
+      <tr>
+        <div class="flex mt-6 items-center space-x-6">
+            <td class="pt-4 pr-4 flex-shrink-0">
+                <img class="w-8 h-8 rounded-full" src="/img/ubuntu.svg" alt="Neil image">
+            </td>
+            <td class="pt-4 pr-4 flex-1 items-center text-base font-semibold text-gray-900 dark:text-white">
+              🔴 Off
+            </td>
+            <td class="pt-4 pr-4 flex-1 min-w-1">
+                <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                  DESKTOP-SIRBSHC
+                </p>
+                <p class="text-sm text-gray-500 dark:text-gray-400">
+                  Public IP: 1.2.3.4
+                </p>
+            </td>
+            <td class="pt-4 pr-4 flex-1 min-w-1">
+              <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                Ubuntu
+              </p>
+              <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                20.04.3 LTS (Focal Fossa)
+              </p>
+            </td>
+            <td class="pt-4 pr-4 flex-1 min-w-1">
+              <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                💻 11th Gen Intel(R) Core(TM) i9-11900H @ 2.50GHz
+
+              </p>
+              <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                CPUs: 16
+                &nbsp;&nbsp;&nbsp;
+                RAM: 8 GB (38% use)
+                &nbsp;&nbsp;&nbsp;
+                SWAP 2 GB (13% use)
+              </p>
+            </td>
+
+            <td class="pt-4 pr-4 flex-1 items-center text-base font-semibold text-gray-900 dark:text-white">
+              <p class="text-sm">
+                💽 Disk: 20 GB
+              </p>
+              <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                (87% used) <span class="bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-green-200 dark:text-green-900">OK</span>
+              </p>
+            </td>
+        </div>
+      </tr>
+
+    </table>
  </div>
 
 
