--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -3,7 +3,7 @@
     <div class="flex justify-between items-center mb-4">
       <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Hosts under monitoring</h5>
       <a href="#" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
-          ➕ Add new host
+          + Add new host
       </a>
  </div>
  <div class="flow-root">
