Moved add monitor function to apis so ctrl+r does not create new monitors each time after 'add new host' button is clicked

--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -2,8 +2,8 @@
   <div class="p-4 mt-28 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700">
     <div class="flex justify-between items-center mb-4">
       <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Hosts under monitoring</h5>
-      <form method="post">
-        <button href="#" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
+      <form action="api/add_monitor" method="post">
+        <button class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
             + Add new host
         </button>
       </form>
