--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -57,14 +57,44 @@ docker run -d --name=hothost \
   --cap-add SYS_PTRACE \
   --security-opt apparmor=unconfined \
   -v /etc/hostname:/host/etc/hostname:ro \
-  devforth/hothost bash</pre>
+  devforth/hothost</pre>
                 <p class="text-sm text-gray-500 dark:text-gray-400 relative">
                   Refresh this page to see update.
                 </p>
               </div>
               
               <div class="hidden py-4 bg-gray-50 rounded-lg dark:bg-gray-800" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
-                  <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Dashboard tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
+                  
+                <p class="text-sm text-gray-500 dark:text-gray-400 relative">
+                  If you have a Docker Compose stack you can just add this snippe:
+                  <button
+                    class="absolute right-2 top-12 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded"
+                    onclick="copyToCb('composepre')"
+                  >
+                    Copy
+                  </button>
+                </p>
+
+                <pre id="composepre" class="p-4 mb-4 text-xs bg-gray-100 dark:bg-gray-800 block rounded shadow-xl mt-5 whitespace-pre overflow-x-none text-gray-500 dark:text-gray-400">
+version: '3'
+services:
+  netdata:
+    image: devforth/hothost
+    restart: unless-stopped
+    cap_add:
+      - SYS_PTRACE
+    security_opt:
+      - apparmor:unconfined
+    volumes:
+      - /etc/passwd:/host/etc/passwd:ro
+      - /etc/group:/host/etc/group:ro
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /etc/os-release:/host/etc/os-release:ro</pre>
+                <p class="text-sm text-gray-500 dark:text-gray-400 relative">
+                  Refresh this page to see update.
+                </p>
+
               </div>
               <div class="hidden py-4 bg-gray-50 rounded-lg dark:bg-gray-800" id="settings" role="tabpanel" aria-labelledby="settings-tab">
                   <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Settings tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
