--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -2,7 +2,7 @@
   <div class="p-4 mt-28 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700">
     <div class="flex justify-between items-center mb-4">
       <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Hosts under monitoring</h5>
-      <form action="api/add_monitor" method="post">
+      <form action="/api/add_monitor" method="post">
         <button class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
             + Add new host
         </button>
@@ -10,32 +10,33 @@
  </div>
  <div class="flow-root">
     <table role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
-      
+      {{#each monitoringData}}
+      {{#if this.no_data}}
       <tr>
         <div class="p-6 bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-700 dark:border-gray-700">
           <h5 class="text-md font-bold leading-none text-gray-900 dark:text-white">Configure your agent</h5>
 
           <div class="mb-4 ">
-              <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="myTab" data-tabs-toggle="#myTabContent" role="tablist">
+              <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="myTab-{{ this.id }}" data-tabs-toggle="#myTabContent-{{ this.id }}" role="tablist">
                   <li role="presentation">
-                      <button class="inline-block p-4 rounded-t-lg border-b-2" id="profile-tab" data-tabs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">
+                      <button class="inline-block p-4 rounded-t-lg border-b-2" id="profile-tab-{{ this.id }}" data-tabs-target="#profile-{{ this.id }}" type="button" role="tab" aria-controls="profile" aria-selected="false">
                         Pure Docker
                       </button>
                   </li>
                   <li  role="presentation">
-                      <button class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="dashboard-tab" data-tabs-target="#dashboard" type="button" role="tab" aria-controls="dashboard" aria-selected="false">
+                      <button class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="dashboard-tab-{{ this.id }}" data-tabs-target="#dashboard-{{ this.id }}" type="button" role="tab" aria-controls="dashboard" aria-selected="false">
                         Compose
                       </button>
                   </li>
                   <li role="presentation">
-                      <button class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="settings-tab" data-tabs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
+                      <button class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="settings-tab-{{ this.id }}" data-tabs-target="#settings-{{ this.id }}" type="button" role="tab" aria-controls="settings" aria-selected="false">
                         Pure Bash
                       </button>
                   </li>
               </ul>
           </div>
-          <div id="myTabContent">
-              <div class="hidden py-2 rounded-lg " id="profile" role="tabpanel" aria-labelledby="profile-tab">
+          <div id="myTabContent-{{ this.id }}">
+              <div class="hidden py-2 rounded-lg " id="profile-{{ this.id }}" role="tabpanel" aria-labelledby="profile-tab-{{ this.id }}">
                 <p class="text-sm text-gray-500 dark:text-gray-400 relative">
                   Make sure you have <a class="text-blue-600 hover:underline dark:text-blue-500" href="https://docs.docker.com/engine/install/">Docker engine installed</a> and run this:
                   <button
@@ -63,18 +64,16 @@ docker run -d --name=hothost \
                 </p>
               </div>
               
-              <div class="hidden py-4 bg-gray-50 rounded-lg dark:bg-gray-800" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
+              <div class="hidden py-4 bg-gray-50 rounded-lg dark:bg-gray-800" id="dashboard-{{ this.id }}" role="tabpanel" aria-labelledby="dashboard-tab-{{ this.id }}">
                   <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Dashboard tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
               </div>
-              <div class="hidden py-4 bg-gray-50 rounded-lg dark:bg-gray-800" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+              <div class="hidden py-4 bg-gray-50 rounded-lg dark:bg-gray-800" id="settings-{{ this.id }}" role="tabpanel" aria-labelledby="settings-tab-{{ this.id }}">
                   <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Settings tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
               </div>
           </div>
         </div>
       </tr>
-      {{#each monitoringData}}
-
-
+      {{else}}
       <tr class="pt-11 border-b border-gray-200 dark:border-gray-700">
             <td class="py-4 pr-4 flex-shrink-0">
                 <img class="w-8 h-8 rounded-full" src="/img/ubuntu.svg" alt="Neil image">
@@ -88,41 +87,41 @@ docker run -d --name=hothost \
             </td>
             <td class="pr-5 flex-1 min-w-1">
                 <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                  DESKTOP-SIRBSHC
+                  {{ this.hostname }}
                 </p>
                 <p class="text-sm text-gray-500 dark:text-gray-400">
-                  Public IP: 1.2.3.4
+                  Public IP: {{ this.public_ip }}
                 </p>
             </td>
             <td class="pr-5 flex-1 min-w-1">
               <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                Ubuntu
+                {{ this.os_name }}
               </p>
               <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                20.04.3 LTS (Focal Fossa)
+                {{ this.os_version }}
               </p>
             </td>
             <td class="pr-5 flex-1 min-w-1">
               <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
-                💻 11th Gen Intel(R) Core(TM) i9-11900H @ 2.50GHz
+                💻 {{ this.cpu_name }}
 
               </p>
               <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                CPUs: 16
+                CPUs: {{ this.cpu_count }}
                 &nbsp;&nbsp;&nbsp;
-                RAM: 8 GB (38% use)
+                RAM: {{ this.ram_total }} ({{ this.ram_used }}% used)
                 &nbsp;&nbsp;&nbsp;
-                SWAP 2 GB (13% use)
+                SWAP {{ this.swap_total }} ({{ this.swap_used }}% used)
               </p>
             </td>
 
             <td class="flex-1 items-center text-base font-semibold text-gray-900 dark:text-white">
               <p class="text-sm">
-                💽 Disk: 20 GB
+                💽 Disk: {{ this.disk_total }}
               </p>
               <p class="text-sm text-gray-500 truncate dark:text-gray-400">
-                87% use
-                {{#if 1}}
+                {{ this.disk_used }}% use
+                {{#if disk_warning }}
                   <span class="bg-pink-100 text-pink-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-pink-200 dark:text-pink-900">WARNING</span>
                 {{else}}
                   <span class="bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-green-200 dark:text-green-900">OK</span>
@@ -131,6 +130,7 @@ docker run -d --name=hothost \
             </td>
         </div>
       </tr>
+      {{/if}}
       {{/each}}
     </table>
  </div>
