--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -13,105 +13,107 @@
       {{#each monitoringData}}
       {{#if this.no_data}}
       <tr>
-        <div class="p-6 bg-white rounded-lg shadow-md dark:bg-gray-800">
-          <h5 class="text-md font-bold leading-none text-gray-900 dark:text-white">Configure your agent</h5>
+        <td colspan="10">
+          <div class="p-6 bg-white rounded-lg shadow-md dark:bg-gray-800">
+            <h5 class="text-md font-bold leading-none text-gray-900 dark:text-white">Configure your agent</h5>
 
-          <div class="mb-4 ">
-              <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="myTab-{{ this.id }}" data-tabs-toggle="#myTabContent-{{ this.id }}" role="tablist">
-                  <li role="presentation">
-                      <button class="inline-block p-4 rounded-t-lg border-b-2" id="profile-tab-{{ this.id }}" data-tabs-target="#profile-{{ this.id }}" type="button" role="tab" aria-controls="profile" aria-selected="false">
-                        Pure Docker
-                      </button>
-                  </li>
-                  <li  role="presentation">
-                      <button class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="dashboard-tab-{{ this.id }}" data-tabs-target="#dashboard-{{ this.id }}" type="button" role="tab" aria-controls="dashboard" aria-selected="false">
-                        Compose
-                      </button>
-                  </li>
-                  <li role="presentation">
-                      <button class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="settings-tab-{{ this.id }}" data-tabs-target="#settings-{{ this.id }}" type="button" role="tab" aria-controls="settings" aria-selected="false">
-                        Pure Bash
-                      </button>
-                  </li>
-              </ul>
-          </div>
-          <div id="myTabContent-{{ this.id }}">
-              <div class="hidden py-2 rounded-lg " id="profile-{{ this.id }}" role="tabpanel" aria-labelledby="profile-tab-{{ this.id }}">
-                <p class="text-sm text-gray-500 dark:text-gray-400 relative">
-                  Make sure you have <a class="text-blue-600 hover:underline dark:text-blue-500" href="https://docs.docker.com/engine/install/">Docker engine installed</a> and run this:
-                  <button
-                    class="absolute right-2 top-12 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded"
-                    onclick="copyToCb('puredocpre')"
-                  >
-                    Copy
-                  </button>
-                </p>
-
-                <pre id="puredocpre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
-docker run -d \
-  -v /etc/passwd:/host/etc/passwd:ro \
-  -v /etc/group:/host/etc/group:ro \
-  -v /proc:/host/proc:ro \
-  -v /sys:/host/sys:ro \
-  -v /etc/os-release:/host/etc/os-release:ro \
-  --restart unless-stopped \
-  --cap-add SYS_PTRACE \
-  --security-opt apparmor=unconfined \
-  -v /etc/hostname:/host/etc/hostname:ro \
-  devforth/hothost-agent</pre>
-                <p class="text-sm text-gray-500 dark:text-gray-400 relative">
-                  Refresh this page to see update.
-                </p>
-              </div>
-              
-              <div class="hidden py-4 rounded-lg dark:bg-gray-800" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
-                  
-                <p class="text-sm text-gray-500 dark:text-gray-400 relative">
-                  If you have a Docker Compose stack you can just add this snippet:
-                  <button
-                    class="absolute right-2 top-12 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded"
-                    onclick="copyToCb('composepre')"
-                  >
-                    Copy
-                  </button>
-                </p>
-
-                <pre id="composepre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
-version: '3'
-services:
-  netdata:
-    image: devforth/hothost-agent
-    restart: unless-stopped
-    cap_add:
-      - SYS_PTRACE
-    security_opt:
-      - apparmor:unconfined
-    volumes:
-      - /etc/passwd:/host/etc/passwd:ro
-      - /etc/group:/host/etc/group:ro
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /etc/os-release:/host/etc/os-release:ro</pre>
-                <p class="text-sm text-gray-500 dark:text-gray-400 relative">
-                  Refresh this page to see update.
-                </p>
-
-              </div>
-              <div class="hidden py-4 rounded-lg dark:bg-gray-800" id="settings" role="tabpanel" aria-labelledby="settings-tab">
-                  <p class="text-sm text-gray-500 dark:text-gray-400">
-                    If you want to run agent locally without Docker you can add one-time job on start <code class="rounded bg-pink-100 text-red-900 p-1">crontab -e</code>  and add next
-                    <pre id="composepre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
-@reboot HOTHOST_SERVER_HOST=1\
-  HOTHOST_MONITOR_INTERVAL=1\
-  HOTHOST_AGENT_SECRET=1\
-  curl https://raw.githubusercontent.com/devforth/hothost/main/hothost-agent/getinfo.sh | bash
-</pre>
-                      
-                    
+            <div class="mb-4 ">
+                <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="myTab-{{ this.id }}" data-tabs-toggle="#myTabContent-{{ this.id }}" role="tablist">
+                    <li role="presentation">
+                        <button class="inline-block p-4 rounded-t-lg border-b-2" id="profile-tab-{{ this.id }}" data-tabs-target="#profile-{{ this.id }}" type="button" role="tab" aria-controls="profile" aria-selected="false">
+                          Pure Docker
+                        </button>
+                    </li>
+                    <li  role="presentation">
+                        <button class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="dashboard-tab-{{ this.id }}" data-tabs-target="#dashboard-{{ this.id }}" type="button" role="tab" aria-controls="dashboard" aria-selected="false">
+                          Compose
+                        </button>
+                    </li>
+                    <li role="presentation">
+                        <button class="inline-block p-4 rounded-t-lg border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="settings-tab-{{ this.id }}" data-tabs-target="#settings-{{ this.id }}" type="button" role="tab" aria-controls="settings" aria-selected="false">
+                          Pure Bash
+                        </button>
+                    </li>
+                </ul>
+            </div>
+            <div id="myTabContent-{{ this.id }}">
+                <div class="hidden py-2 rounded-lg " id="profile-{{ this.id }}" role="tabpanel" aria-labelledby="profile-tab-{{ this.id }}">
+                  <p class="text-sm text-gray-500 dark:text-gray-400 relative">
+                    Make sure you have <a class="text-blue-600 hover:underline dark:text-blue-500" href="https://docs.docker.com/engine/install/">Docker engine installed</a> and run this:
+                    <button
+                      class="absolute right-2 top-12 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded"
+                      onclick="copyToCb('puredocpre')"
+                    >
+                      Copy
+                    </button>
                   </p>
-              </div>
+
+                  <pre id="puredocpre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
+  docker run -d \
+    -v /etc/passwd:/host/etc/passwd:ro \
+    -v /etc/group:/host/etc/group:ro \
+    -v /proc:/host/proc:ro \
+    -v /sys:/host/sys:ro \
+    -v /etc/os-release:/host/etc/os-release:ro \
+    --restart unless-stopped \
+    --cap-add SYS_PTRACE \
+    --security-opt apparmor=unconfined \
+    -v /etc/hostname:/host/etc/hostname:ro \
+    devforth/hothost-agent</pre>
+                  <p class="text-sm text-gray-500 dark:text-gray-400 relative">
+                    Refresh this page to see update.
+                  </p>
+                </div>
+                
+                <div class="hidden py-4 rounded-lg dark:bg-gray-800" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
+                    
+                  <p class="text-sm text-gray-500 dark:text-gray-400 relative">
+                    If you have a Docker Compose stack you can just add this snippet:
+                    <button
+                      class="absolute right-2 top-12 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 border border-blue-700 rounded"
+                      onclick="copyToCb('composepre')"
+                    >
+                      Copy
+                    </button>
+                  </p>
+
+                  <pre id="composepre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
+  version: '3'
+  services:
+    netdata:
+      image: devforth/hothost-agent
+      restart: unless-stopped
+      cap_add:
+        - SYS_PTRACE
+      security_opt:
+        - apparmor:unconfined
+      volumes:
+        - /etc/passwd:/host/etc/passwd:ro
+        - /etc/group:/host/etc/group:ro
+        - /proc:/host/proc:ro
+        - /sys:/host/sys:ro
+        - /etc/os-release:/host/etc/os-release:ro</pre>
+                  <p class="text-sm text-gray-500 dark:text-gray-400 relative">
+                    Refresh this page to see update.
+                  </p>
+
+                </div>
+                <div class="hidden py-4 rounded-lg dark:bg-gray-800" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+                    <p class="text-sm text-gray-500 dark:text-gray-400">
+                      If you want to run agent locally without Docker you can add one-time job on start <code class="rounded bg-pink-100 text-red-900 p-1">crontab -e</code>  and add next
+                      <pre id="composepre" class="p-4 mb-4 text-gray-500 dark:text-white text-xs text-white bg-white border dark:border-gray-600 dark:bg-gray-700 block rounded shadow-md mt-5 whitespace-pre overflow-x-none ">
+  @reboot HOTHOST_SERVER_HOST=1\
+    HOTHOST_MONITOR_INTERVAL=1\
+    HOTHOST_AGENT_SECRET=1\
+    curl https://raw.githubusercontent.com/devforth/hothost/main/hothost-agent/getinfo.sh | bash
+  </pre>
+                        
+                      
+                    </p>
+                </div>
+            </div>
           </div>
-        </div>
+        </td>
       </tr>
       {{else}}
       <tr class="pt-11 border-b border-gray-200 dark:border-gray-700">
@@ -168,7 +170,6 @@ services:
                 {{/if}}
               </p>
             </td>
-        </div>
       </tr>
       {{/if}}
       {{/each}}
